<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:gravity="center"
    android:background="#FFFFFF"
    >

    <TextView
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/almostthere"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_large"
        />


    <TextView
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Thankyou"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foranycomments"


        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"

        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BahaSagar@gmail.com"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thatsit"
        android:textSize="@dimen/text_size_medium"
        android:gravity="center"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp" />
</LinearLayout>