<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ly.bsagar.libyanaguid.MyIntro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/welcome"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:text="@string/easy" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:src="@drawable/ic_libaya_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/tour"
            android:textSize="@dimen/text_size_medium" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:onClick="changelang"
            android:text="@string/changelanguage" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_gravity="center"
            android:onClick="changelang"
            android:src="@drawable/ic_language_black_24dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp" />


</LinearLayout>
