<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whatdoesthisappdo"
            android:textSize="@dimen/text_size_large" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_view_list_black_24dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/servicesss"
                android:textSize="@dimen/text_size_medium" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_call_made_black_24dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/pay4mepay4me"
                android:textSize="@dimen/text_size_medium" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_attach_money_black_24dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/sendbalancesend"
                android:textSize="@dimen/text_size_medium" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_payment_black_24dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/damagedvouchercards"
                android:textSize="@dimen/text_size_medium" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/ic_autorenew_black_24dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/checkbalancece"
                android:textSize="@dimen/text_size_medium" />


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp" />

    </LinearLayout>

</ScrollView>