<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ly.bsagar.libyanaguid.setting"
    android:id="@+id/rootView"
    android:orientation="vertical"
    android:gravity="center"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phoneType"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:drawableStart="@drawable/ic_sim_card_black_24dp"
        android:drawableLeft="@drawable/ic_sim_card_black_24dp"
        android:textSize="@dimen/text_size_medium"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dualsim"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/primary"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="3dp"
        android:background="@color/colorAccent"
        android:text="@string/change"
        android:onClick="change"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        />
<!--
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="false"
        android:text="@string/dualsim"
        android:id="@+id/dual"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:onClick="hide"
        />


    <CheckBox
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:checked="true"
        android:text="@string/primary"
        android:id="@+id/primary"
        android:visibility="gone"
        />
    </LinearLayout>

-->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/black"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="Libyana"
        android:src="@drawable/ic_libaya_icon"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <android.support.design.widget.FloatingActionButton
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:id="@+id/share"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:src="@drawable/ic_share_black_24dp"
            android:onClick="share"
            />
        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/share"
            android:layout_below="@+id/share"
            android:gravity="center"
            />
        <android.support.design.widget.FloatingActionButton
            android:layout_width="@dimen/fab_size"
            android:layout_height="@dimen/fab_size"
            android:id="@+id/rate"
            android:layout_marginRight="65dp"
            android:layout_marginEnd="65dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_star_border_black_24dp"
            android:onClick="rate"
            />
        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/rate"
            android:layout_marginRight="65dp"
            android:layout_marginEnd="65dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/rate"
            />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/black"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY"
        android:layout_margin="@dimen/activity_horizontal_margin"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myname"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BahaSagar@gmail.com"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/tradeMark"
       android:gravity="center"
       />

</LinearLayout>


</ScrollView>