<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/payforme">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ly.bsagar.libyanaguid.pay4me">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/ContactChooserPay4me"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"

        >

        <EditText
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="3"
            android:gravity="center"
            android:hint="092XXXXXXX"
            android:inputType="phone"
            android:padding="6dp"
            android:textSize="@dimen/text_size_large" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:onClick="choose"
            android:src="@drawable/ic_account_box_black_24dp"


            />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:onClick="call"
        android:padding="@dimen/activity_horizontal_margin"
        android:src="@drawable/ic_call_black_24dp"

        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/black"
        android:paddingBottom="2dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="2dp"
        android:scaleType="fitXY" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/text_size_medium"
        android:text="@string/manageLists" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="65dp"

                android:layout_height="65dp"

                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:onClick="call125"
                android:padding="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_call_black_24dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call125"
                />

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.FloatingActionButton
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/activity_vertical_margin"

                android:onClick="callreset"
                android:padding="@dimen/activity_horizontal_margin"
                android:src="@drawable/ic_fiber_pin_black_24dp"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewPay4me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5706305242969303/2539415673"
        >
    </com.google.android.gms.ads.AdView>

</LinearLayout>


</ScrollView>